--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'application'
 }
 
-version = 1.1
+version = 1.2
 
 repositories {
     jcenter()
@@ -12,11 +12,26 @@ repositories {
 
 dependencies {
     implementation group: 'org.reflections', name: 'reflections', version: '0.9.11'
-    implementation 'com.sedmelluq:lavaplayer:1.3.10'
+    implementation 'com.sedmelluq:lavaplayer:1.3.43'
     implementation 'net.dv8tion:JDA:3.8.3_460'
-    implementation 'com.github.MoSadie:PlexAPI-Java:50f304e7ea'
+    implementation 'com.github.MoSadie:PlexAPI-Java:99b5740ca9'
+    implementation 'com.jcabi:jcabi-manifests:1.1'
 }
 
 application {
     mainClassName = 'io.github.mosadie.jplexbot.JPlexBot'
+}
+
+jar {
+    manifest {
+        attributes([
+            "Specification-Title": "JPlexBot",
+            "Specification-Vendor": "MoSadie",
+            "Specification-Version": "1",
+            "Implementation-Title": "JPlexBot",
+            "Implementation-Version": "${version}",
+            "Implementation-Vendor" :"MoSadie",
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
 }
